Fixed dropdown offset on safari

--- a/src/sass/components/_components.site-nav.scss
+++ b/src/sass/components/_components.site-nav.scss
@@ -189,7 +189,7 @@
         position: absolute;
         //transition: 0.2s;
         width: 0em;
-        
+        left: 0;
         overflow: hidden;
         //text-indent: -999999px;
         @media screen and (max-width: 1320px) {
